--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -1,7 +1,6 @@
 //- In 'includes' all paths to assets should be relative to the index.pug file,
 //- like so './images/image.jpg',
 //- and not '../images/image.jpg'
-
 header.page-start
   .top-bar
     .container.h-100
@@ -32,4 +31,30 @@ header.page-start
               a(href="#") Русский
               a(href="#") Казахский
               a(href="#") Английский
-    
+  .navbar
+    .container
+      .row.w-100.align-items-center
+        .col.col-auto
+          .navbar-logo
+            a(href="#")
+              img(src="./images/logo.svg")
+        .col.col-auto.mx-auto.d-md-block.d-none
+          ul.navbar-menu
+            li.active
+              a(href="#") О госпитале
+            li
+              a(href="#") Корпоративное управление
+            li
+              a(href="#") Пациентам
+            li
+              a(href="#") Пресс центр
+        .col.col-auto.d-md-block.d-none
+          form.navbar-search
+            input(id="site-search")
+            button(type="submit")
+              img(src="./images/icons/search.svg")
+        .col.col-auto.navbar-menu-button
+          button
+            span
+            span
+            span
