--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,19 @@
 @import 'fonts';
 @import 'vars';
 @import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/slick-carousel/slick/slick";
 @import 'header';
+@import 'main-slider';
+@import 'about';
+@import 'services';
+@import 'news';
+@import 'media';
+@import 'signs';
+@import 'footer';
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -12,4 +24,90 @@ h2,
 h3,
 h4 {
   font-family: $ffHeader;
+}
+
+.page {
+  background-color: #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  &-end {
+    margin-top: auto;
+  }
+
+  &--white {
+    background-color: $white;
+  }
+}
+
+.arrow-link {
+  font-family: $ffHeader;
+  font-size: 16px;
+  position: relative;
+  text-decoration: underline;
+  font-weight: bold;
+
+  &--black {
+    color: $black;
+  }
+
+  &::after {
+    content: url('../images/icons/arrow.svg');
+    margin-left: 10px;
+    transition: transform 0.2s;
+    display: inline-block;
+  }
+
+  &:hover {
+    &::after {
+      transform: translateX(10px);
+    }
+  }
+}
+
+.btn {
+  border-radius: 0;
+  transition: 0.2s;
+}
+
+.icon {
+  width: 44px;
+  height: 44px;
+  line-height: 42px;
+  text-align: center;
+  vertical-align: middle;
+  background-color: $primary;
+  display: inline-block;
+  margin-right: 26px;
+
+  &--white {
+    background-color: $white;
+  }
+}
+
+.external {
+  &-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-family: $ffHeader;
+    color: $black;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 16px 44px 22px 26px;
+    position: relative;
+
+    &:hover {
+      text-decoration: none;
+      color: $black;
+    }
+
+    &::after {
+      content: url('../images/icons/external-icon.svg');
+      position: absolute;
+      right: 16px;
+      top: 16px;
+    }
+  }
 }
