--- a/app/includes/mobile-menu.pug
+++ b/app/includes/mobile-menu.pug
@@ -1,5 +1,5 @@
 section.mobile-menu-wrap#mobile-menu
-  .mobile-menu-close
+  .mobile-menu-close.mobile-menu-close-btn
   .mobile-menu-inner
     header.mobile-menu-header
       .mobile-menu-logo
