--- a/app/includes/services.pug
+++ b/app/includes/services.pug
@@ -19,4 +19,24 @@ section.services-section
               img(src="./images/icons/team-icon.svg")
             .team-position Директор
             .team-name Уразалина Динара Аманболовна
-            button.btn.btn-flat.btn-primary.btn-lg Задать вопрос
+            button.btn.btn-flat.btn-primary.btn-lg(data-toggle="modal" data-target="#serviceModal") Задать вопрос
+
+  .modal.fade#serviceModal(tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
+    .modal-dialog.modal-dialog-centered
+      .modal-content
+        .modal-header
+          h3.modal-title Вопрос администрации госпиталя
+          .mobile-menu-close.close(data-dismiss="modal")
+        .modal-body
+          form.modal-form
+            label.modal-form-group
+              span Ваше Ф.И.О.
+              input(required="true")
+            label.modal-form-group
+              span Ваше Ф.И.О.
+              input(required="true")
+            label.modal-form-group
+              span Ваше Ф.И.О.
+              textarea
+            .modal-form-action
+              button.btn.btn-primary.btn-lg Отправить
