add article page;

--- a/app/about.pug
+++ b/app/about.pug
@@ -5,17 +5,62 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Document
-  body.page.page--white
+  body.page
     .page-start
       include includes/header.pug
       include includes/mobile-menu.pug
-    .page-body
-      include includes/main-slider
-      include includes/mission
-      include includes/services
-      include includes/news
-      include includes/media
-      include includes/signs
-      include includes/external
+    .page-body.about-page
+      .container
+        ul.breadcrumbs
+          li
+            a(href="#") Главная
+          li
+            span O госпитале 
+        .row
+          .col.col-lg-8.col-12
+            h1.article-title О госпитале
+        .row
+          aside.col.col-lg-3.col-12
+            .sidebar
+              ul.sidebar-list
+                li
+                  a(href="#") Администрация
+                li
+                  a(href="#") Лицензии
+                li
+                  a(href="#") Цели и задачи
+                li
+                  a(href="#") Этический кодекс
+                li
+                  a(href="#") Вакансии
+                li
+                  a(href="#") Контакты
+          .col.col-lg-6.col-12.offset-lg-2.article
+            article
+              p Согласно Постановления Правительства Республики Казахстан от 1 декабря 2004 г. № 1247 «О реорганизации государственного учреждения: «Республиканский клинический госпиталь для инвалидов Отечественной войны» Министерства здравоохранения организовано в Астане путём отделения - государственное учреждение «Центральный клинический госпиталь для инвалидов Отечественной войны» на 80 коек. В сентябре 2009 года Постановлением Правительства РК статус госучреждения был изменён на госпредприятие.
+              img(src="./images/about-1.png" style="float: right;")
+              p Реорганизация позволила высоко организовать работу в госпитале на столичном уровне, применение самых эффективных медицинских препаратов и технологи лечения, что  способствуют быстрому выздоровлению больных, придают им уверенность и надежду на полноценную, долголетнюю жизнь. Наши пациенты  безоговорочно предпочитают лечиться именно в Центральном клиническом госпитале, при наличии у них  права на  первоочередного обслуживания во всех медицинских организациях республики.
+
+      section.green-section
+        .container
+          .row
+            .col.offset-lg-1.col-lg-4.col-12
+              .banner-pre Миссия госпиталя:
+              .banner-title «Сохранение здоровья и улучшение качества жизни!»
+            .col.offset-lg-1.col-lg-5.col-12  
+              .banner-pre Видение:
+              .banner-title «Современный республиканский клинический реабилитационный госпиталь с пациенто-ориентированной системой оказания медицинской помощи, основанной на стандартах качества и госпитального менеджмента».
+      .container
+        .row
+          .col.col-lg-3.col-12
+          .col.col-lg-6.col-12.offset-lg-2.article
+            p Основной целью деятельности республиканского государственного предприятия на ПХВ является оказание квалифицированной, специализированной и высокоспециализированной медицинской помощи участникам и инвалидам Отечественной войны (УиИОВ), войнам-интернационалистам (ВИ), лицам, пострадавшим от ионизирующего излучения при аварии на Чернобыльской АЭС (ЛПИИ-Ч) и Семипалатинском испытательном ядерном полигоне (ЛПИИ-С), реабилитированным жертвам массовых политических репрессий (ЖР), семьям погибших воинов (СП), персональным пенсионерам республиканского значения (ГР – гражданская группа).
+            p Центральный клинический госпиталь для инвалидов Отечественной войны г.Нур-Султан - уникальная на постсоветском пространстве медицинская организация, оказывающая все виды медицинской помощи участникам Великой Отечественной войны и лицам,
+            img(src="./images/about-2.png" style="float: right")
+            p РГП на ПХВ «Центральный клинический госпиталь инвалидов Отечественной войны» (далее–ЦКГИОВ) на сегодня является  специализированным клиническим центром, оказывающим стационарную и консультативно-диагностическую помощь.
+            p В декабре 2018 года Министерством здравоохранения  сформирован Наблюдательный совет госпиталя.
+            p Госпиталь утвердил стратегию развития на 2017-2021 годы, ориентируемую на создание современного республиканского специализированного госпиталя с центром реабилитации, оказывающего пациенториентированную медицинскую помощи с современным оснащением и подготовкой специалистов, использующих передовой международный опыт услуг по реабилитации.
+      .article-end
+        include includes/external
     .page-end
       include includes/footer.pug
