--- a/app/styles/article.scss
+++ b/app/styles/article.scss
@@ -38,6 +38,10 @@
     color: $white;
     font-family: $ffHeader;
     font-size: 18px;
+
+    @include media-breakpoint-down(md) {
+      margin-top: 20px;
+    }
   }
 
   &-title {
@@ -58,6 +62,11 @@
 
   img {
     margin: 58px 0;
+    max-width: 100vw;
+
+    @include media-breakpoint-down(md) {
+      max-width: 100%;
+    }
   }
 
   &-title {
@@ -74,6 +83,12 @@
   border: 22px solid $white;
   padding: 30px 18px 30px 28px;
   margin-top: 57px;
+  max-width: 285px;
+  margin-bottom: 30px;
+
+  @include media-breakpoint-down(md) {
+    margin-top: 20px;
+  }
 
   &-list {
     list-style: none;
