adds zakup page;

--- a/app/admin.pug
+++ b/app/admin.pug
@@ -61,7 +61,7 @@ html(lang="ru")
 
               p(style="font-size:16px") График приема физических лиц и представителей юридических лиц отдельными работниками РГП на ПХВ «Центральный клинический госпиталь для инвалидов Отечественной войны» Министерства здравоохранения Республики Казахстан
 
-              table
+              table.table-responsive
                 tr
                   th ФИО<br>Должность
                   th Дни приема
