--- a/app/styles/article.scss
+++ b/app/styles/article.scss
@@ -72,6 +72,10 @@
   &-title {
     font-size: 48px;
     margin-top: 29px;
+
+    @include media-breakpoint-down(md) {
+      font-size: 28px;
+    }
   }
 
   &-end {
@@ -81,6 +85,10 @@
   .team {
     align-items: center;
     margin-bottom: 83px;
+
+    @include media-breakpoint-down(md) {
+      justify-content: start;
+    }
 
     &-name {
       margin-top: 0;
@@ -165,6 +173,56 @@
   }
 }
 
+.pagination {
+  display: flex;
+
+  a {
+    display: block;
+    min-width: 33px;
+    height: 33px;
+    border: 4px solid transparent;
+    color: #707070;
+    text-align: center;
+    line-height: 27px;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    margin-right: 8px;
+
+    &.active {
+      color: $black;
+      border: 4px solid #5dae51;
+    }
+
+    &:hover {
+      color: $black;
+      text-decoration: none;
+    }
+  }
+}
+
+.post {
+  &-date {
+    color: #707070;
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  &-name {
+    font-weight: bold;
+    font-family: $ffHeader;
+    font-size: 18px;
+    line-height: 1.3;
+
+    a {
+      color: inherit;
+    }
+  }
+
+  &-item {
+    margin-bottom: 54px;
+  }
+}
+
 .sidebar {
   border: 22px solid $white;
   padding: 30px 18px 30px 28px;
@@ -172,8 +230,42 @@
   max-width: 285px;
   margin-bottom: 30px;
 
+  &-wrap {
+    margin-bottom: 40px;
+  }
+
   @include media-breakpoint-down(md) {
     margin-top: 20px;
+  }
+
+  &-link {
+    a {
+      font-family: $ffHeader;
+      font-size: 24px;
+      padding-right: 32px;
+      position: relative;
+      color: $black;
+      text-decoration: underline;
+
+      &:hover {
+        text-decoration: none;
+      }
+
+      &::after {
+        content: url('../images/icons/external-icon.svg');
+        position: absolute;
+        top: -3px;
+        right: 0;
+      }
+    }
+  }
+
+  &-label {
+    font-size: 18px;
+    color: $primary;
+    font-weight: bold;
+    font-family: $ffHeader;
+    margin-bottom: 16px;
   }
 
   &-list {
@@ -220,4 +312,8 @@
       }
     }
   }
+}
+
+.under-title {
+  margin-top: 60px;
 }
