--- a/app/styles/article.scss
+++ b/app/styles/article.scss
@@ -57,7 +57,7 @@
   line-height: 1.4;
 
   p {
-    margin-bottom: 1em;
+    margin-bottom: 1.4em;
   }
 
   img {
@@ -80,6 +80,18 @@
 
   &-end {
     margin-top: 100px;
+  }
+
+  .table-big {
+    margin: 60px -18%;
+
+    @include media-breakpoint-down(md) {
+      margin-left: 0;
+      margin-right: 0;
+      max-width: 100%;
+      overflow-x: auto;
+      display: block;
+    }
   }
 
   .team {
@@ -130,6 +142,28 @@
         width: 7px;
         height: 7px;
         border: 2px solid $primary;
+      }
+    }
+  }
+
+  ol {
+    margin: 0 0 50px;
+    padding: 0 0 0 21px;
+    color: $primary;
+    font-size: 20px;
+    font-family: $ffHeader;
+
+    li {
+      padding-left: 11px;
+      position: relative;
+      font-size: 18px;
+      line-height: 1.4;
+      margin-bottom: 25px;
+
+      span {
+        color: $black;
+        font-size: 18px;
+        font-family: $ffMain;
       }
     }
   }
@@ -316,4 +350,68 @@
 
 .under-title {
   margin-top: 60px;
+}
+
+.download {
+  &-wrap {
+    display: flex;
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+
+  &-title {
+    flex-shrink: 0;
+    margin-right: auto;
+    font-size: 30px;
+    font-family: $ffHeader;
+    color: $primary;
+    margin-bottom: 30px;
+  }
+
+  &-item {
+    max-width: 270px;
+    color: $black;
+    display: block;
+    margin-bottom: 30px;
+
+    &:hover {
+      text-decoration: none;
+
+      .download-item-text {
+        text-decoration: underline;
+      }
+    }
+
+    &-text {
+      font-size: 16px;
+      color: $black;
+    }
+
+    &-img {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 30px;
+    }
+
+    &-icon {
+      width: 45px;
+      height: 59px;
+      background-repeat: no-repeat;
+      background-image: url('../images/icons/pdf-icon.svg');
+      background-size: contain;
+      margin-right: 11px;
+      font-weight: bold;
+      color: $black;
+      display: flex;
+      align-items: flex-end;
+      padding-left: 8px;
+      padding-bottom: 3px;
+    }
+
+    &-size {
+      color: #707070;
+      font-size: 14px;
+      margin-bottom: 4px;
+    }
+  }
 }
