adds other pages;

--- a/app/about.pug
+++ b/app/about.pug
@@ -19,7 +19,7 @@ html(lang="ru")
         .row
           .col.col-lg-8.col-12
             h1.article-title О госпитале
-        .row
+        .row.under-title
           aside.col.col-lg-3.col-12
             .sidebar
               ul.sidebar-list
