--- a/app/zakup-single.pug
+++ b/app/zakup-single.pug
@@ -18,7 +18,7 @@ html(lang="ru")
             span Государственные закупки
         .row
           .col.col-lg-7.col-12
-            h1.article-title Государственные закупки
+            h1.article-title.article-title--small Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
           .col.col-auto.ml-auto
             .post-date 03 апреля 2020 год
         .row.under-title
