--- a/app/about.pug
+++ b/app/about.pug
@@ -24,7 +24,7 @@ html(lang="ru")
             .sidebar
               ul.sidebar-list
                 li
-                  a(href="#") Администрация
+                  a(href="./admin.html") Администрация
                 li
                   a(href="#") Лицензии
                 li
