--- a/app/branch.pug
+++ b/app/branch.pug
@@ -28,7 +28,7 @@ html(lang="ru")
                 li
                   a(href="#") Платные услуги
                 li
-                  a(href="#") Врачи - специалисты
+                  a(href="./team.html") Врачи - специалисты
 
           .col.col-lg-6.col-12.offset-lg-2.article
             article
