--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -10,7 +10,7 @@ header.page-start
         .col
           ul.top-bar-list
             li
-              a(href="#") Государственны закупки
+              a(href="./zakup.html") Государственны закупки
             li
               a(href="#") Полезная информация
         .col.col-lg-2
@@ -36,18 +36,18 @@ header.page-start
       .row.w-100.align-items-center
         .col.col-auto
           .navbar-logo
-            a(href="#")
+            a(href="./index.html")
               img(src="./images/logo.svg")
         .col.col-auto.mx-auto.d-md-block.d-none
           ul.navbar-menu
             li.active
-              a(href="#") О госпитале
+              a(href="./about.html") О госпитале
             li
               a(href="#") Корпоративное управление
             li
-              a(href="#") Пациентам
+              a(href="./branch.html") Пациентам
             li
-              a(href="#") Пресс центр
+              a(href="./press.html") Пресс центр
         .col.col-auto.d-md-block.d-none
           form.navbar-search
             input(id="site-search")
