--- a/app/includes/news.pug
+++ b/app/includes/news.pug
@@ -18,6 +18,7 @@ section.news-section
             h3.news-title Итоги конкурса рисунков "Победа, Здоровье, Весна"
             .news-text
               p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
+            a.news-link(href="./press-single.html")
         .slider-item
           .news-item
             time.news-date 13.04.2020
@@ -26,6 +27,7 @@ section.news-section
             h3.news-title Поздравляем вас с праздником Наурыз!
             .news-text
               p В это непростое время мы от всей души хотим поздравить вас с праздником Наурыз!
+            a.news-link(href="./press-single.html")
         .slider-item
           .news-item
             time.news-date 13.04.2020
@@ -34,6 +36,7 @@ section.news-section
             h3.news-title Стратегическое развитие 2017-2021 – новые задачи, новые цели, новые управленческие решения
             .news-text
               p Предприятие сформулировало миссию, определила цели, задачи, целевые индикаторы и показатели результатов своей деятельности.
+            a.news-link(href="./press-single.html")
         .slider-item
           .news-item
             time.news-date 13.04.2020
@@ -42,6 +45,7 @@ section.news-section
             h3.news-title Итоги конкурса рисунков "Победа, Здоровье, Весна"
             .news-text
               p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
+            a.news-link(href="./press-single.html")
         .slider-item
           .news-item
             time.news-date 13.04.2020
@@ -50,6 +54,7 @@ section.news-section
             h3.news-title Поздравляем вас с праздником Наурыз!
             .news-text
               p В это непростое время мы от всей души хотим поздравить вас с праздником Наурыз!
+            a.news-link(href="./press-single.html")
         .slider-item
           .news-item
             time.news-date 13.04.2020
@@ -58,3 +63,4 @@ section.news-section
             h3.news-title Стратегическое развитие 2017-2021 – новые задачи, новые цели, новые управленческие решения
             .news-text
               p Предприятие сформулировало миссию, определила цели, задачи, целевые индикаторы и показатели результатов своей деятельности.
+            a.news-link(href="./press-single.html")
