--- a/app/press.pug
+++ b/app/press.pug
@@ -40,6 +40,7 @@ html(lang="ru")
                   h3.news-title Итоги конкурса рисунков "Победа, Здоровье, Весна"
                   .news-text
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
+                  a.news-link(href="./press-single.html")
               .col.col-lg-6.col-12
                 .news-item
                   time.news-date 13.04.2020
@@ -48,6 +49,7 @@ html(lang="ru")
                   h3.news-title Итоги конкурса рисунков "Победа, Здоровье, Весна"
                   .news-text
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
+                  a.news-link(href="./press-single.html")
               .col.col-lg-6.col-12
                 .news-item
                   time.news-date 13.04.2020
@@ -56,6 +58,7 @@ html(lang="ru")
                   h3.news-title Итоги конкурса рисунков "Победа, Здоровье, Весна"
                   .news-text
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
+                  a.news-link(href="./press-single.html")
               .col.col-lg-6.col-12
                 .news-item
                   time.news-date 13.04.2020
@@ -64,6 +67,7 @@ html(lang="ru")
                   h3.news-title Итоги конкурса рисунков "Победа, Здоровье, Весна"
                   .news-text
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
+                  a.news-link(href="./press-single.html")
               .col.col-lg-6.col-12
                 .news-item
                   time.news-date 13.04.2020
@@ -72,6 +76,7 @@ html(lang="ru")
                   h3.news-title Итоги конкурса рисунков "Победа, Здоровье, Весна"
                   .news-text
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
+                  a.news-link(href="./press-single.html")
 
             .pagination
               a.active(href="#") 1
