--- a/app/zakup.pug
+++ b/app/zakup.pug
@@ -30,23 +30,23 @@ html(lang="ru")
               .post-item
                 time.post-date 07.05.2020
                 .post-name
-                  a(href="#") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
+                  a(href="./zakup-single.html") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
               .post-item
                 time.post-date 07.05.2020
                 .post-name
-                  a(href="#") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
+                  a(href="./zakup-single.html") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
               .post-item
                 time.post-date 07.05.2020
                 .post-name
-                  a(href="#") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
+                  a(href="./zakup-single.html") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
               .post-item
                 time.post-date 07.05.2020
                 .post-name
-                  a(href="#") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
+                  a(href="./zakup-single.html") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
               .post-item
                 time.post-date 07.05.2020
                 .post-name
-                  a(href="#") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
+                  a(href="./zakup-single.html") Объявление о проведении закупа изделий медицинского назначения, способом запроса ценовых предложений № 16
 
             .pagination
               a.active(href="#") 1
