adds small animations;

--- a/app/about.pug
+++ b/app/about.pug
@@ -21,7 +21,7 @@ html(lang="ru")
             h1.article-title О госпитале
         .row.under-title
           aside.col.col-lg-3.col-12
-            .sidebar
+            .sidebar.anim.fade-in(data-delay="250")
               ul.sidebar-list
                 li
                   a(href="./admin.html") Администрация
