--- a/app/includes/media.pug
+++ b/app/includes/media.pug
@@ -2,12 +2,12 @@ section.media-section
   .container
     .row
       .col.col-lg-4.offset-lg-1.col-12.mb-5
-        .mission-title.mission-title--white
+        .mission-title.mission-title--white.anim.fade-in
           h2.mission-title-main Сохранение здоровья и улучшение качества жизни!
           .mission-title-sub
             a.arrow-link.arrow-link--black(href="#") подробнее
       .col.col-lg-7.col-12
-        .media-slider
+        .media-slider.anim.fade-in.fade-in-right
           .slider-item
             img(src="./images/media-slide-1.png", alt="")
           .slider-item
