--- a/app/includes/mission.pug
+++ b/app/includes/mission.pug
@@ -2,11 +2,11 @@ section.about-section
   .container
     .row
       .col.col-lg-4.offset-lg-1.col-12
-        .mission-title
+        .mission-title.anim.fade-in
           .mission-title-pre Миссия госпиталя
           h2.mission-title-main Сохранение здоровья и улучшение качества жизни!
       .col.col-lg-5.offset-lg-1.col-12
-        .about
+        .about.anim.fade-in.fade-in-right
           h2.about-title
             span.about-title-icon
               img(src="./images/icons/about-icon.svg")
