--- a/app/includes/news.pug
+++ b/app/includes/news.pug
@@ -1,6 +1,6 @@
 section.news-section
   .container
-    .row
+    .row.anim.fade-in
       .col.col-auto
         h2.news-section-title 
           span.icon
@@ -9,7 +9,7 @@ section.news-section
       .col.col-auto.ml-auto
         a.arrow-link.arrow-link--black(href="#") все новости
     .row
-      .col-12.news-slider
+      .col-12.news-slider.anim.fade-in
         .slider-item
           .news-item
             time.news-date 13.04.2020
