--- a/app/includes/services.pug
+++ b/app/includes/services.pug
@@ -1,7 +1,7 @@
 section.services-section
   .container
     .row
-      .col.col-lg-4.offset-lg-1.col-12.mb-4
+      .col.col-lg-4.offset-lg-1.col-12.mb-4.anim.fade-in
         .icon.icon--white
           img(src="./images/icons/services-icon.svg")
         h2.services-title Услуги госпиталя
@@ -10,7 +10,7 @@ section.services-section
           li Консультативно-диагностическое отделение
           li Платные медицинские услуги
 
-      .col.col-12.col-lg-6.offset-lg-1.mb-4
+      .col.col-12.col-lg-6.offset-lg-1.mb-4.anim.fade-in.fade-in-right
         .team
           .team-img
             img(src="./images/team-main.png")
