--- a/app/press.pug
+++ b/app/press.pug
@@ -20,7 +20,7 @@ html(lang="ru")
           .col.col-lg-8.col-12
             h1.article-title Пресс-центр
         .row.under-title
-          aside.col.col-lg-3.col-12
+          aside.col.col-lg-3.col-12.anim.fade-in
             .sidebar
               ul.sidebar-list
                 li.active
@@ -33,7 +33,7 @@ html(lang="ru")
           .col.col-lg-8.col-12.offset-lg-1
             .row
               .col.col-lg-6.col-12
-                .news-item
+                .news-item.anim.fade-in
                   time.news-date 13.04.2020
                   .news-img
                     img(src="./images/news.png")
@@ -42,7 +42,7 @@ html(lang="ru")
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
                   a.news-link(href="./press-single.html")
               .col.col-lg-6.col-12
-                .news-item
+                .news-item.anim.fade-in(data-delay="200")
                   time.news-date 13.04.2020
                   .news-img
                     img(src="./images/news.png")
@@ -51,7 +51,7 @@ html(lang="ru")
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
                   a.news-link(href="./press-single.html")
               .col.col-lg-6.col-12
-                .news-item
+                .news-item.anim.fade-in
                   time.news-date 13.04.2020
                   .news-img
                     img(src="./images/news.png")
@@ -60,7 +60,7 @@ html(lang="ru")
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
                   a.news-link(href="./press-single.html")
               .col.col-lg-6.col-12
-                .news-item
+                .news-item.anim.fade-in
                   time.news-date 13.04.2020
                   .news-img
                     img(src="./images/news.png")
@@ -69,7 +69,7 @@ html(lang="ru")
                     p Благодарим за участие всех детей! По итогам голосования и оценке внешнего эксперта были определены лучшие работы.
                   a.news-link(href="./press-single.html")
               .col.col-lg-6.col-12
-                .news-item
+                .news-item.anim.fade-in
                   time.news-date 13.04.2020
                   .news-img
                     img(src="./images/news.png")
