--- a/app/includes/signs.pug
+++ b/app/includes/signs.pug
@@ -1,7 +1,7 @@
 section.sign-section
   .container
     .row
-      .col.col-12.col-lg-6.mb-4
+      .col.col-12.col-lg-6.mb-4.anim.fade-in
         .bordered-block.d-flex.flex-wrap.align-items-center.justify-content-center
           .sign-item
             .sign-img
@@ -15,7 +15,7 @@ section.sign-section
             .sign-img
               img(src="./images/sign-3.png")
             .sign-text Гимн
-      .col.col-12.col-lg-6.mb-4
+      .col.col-12.col-lg-6.mb-4.anim.fade-in.fade-in-right
         .bordered-block.d-flex.flex-wrap.align-items-center.justify-content-center
           .sign-item.d-flex.align-items-center.text-left.p-4.justify-content-center
             .sign-img.mr-4.my-0
